# mecanica_estadistica_proyecto

./: .gitignore  CMakeLists.txt  README.md
include/: dinamics.hpp  particle.hpp
src/: main.cpp  test.cpp
